packages/parser/test/parser/E0103-parenthesized-expression.txt
a := (10
===== err =====
anonymous:1:9: ParseError: E0103 - Expected closing parenthesis after parenthesized expression
1 | a := (10
  |         ^
